kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: function-router-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    cert-manager.io/acme-challange-type: http01
spec:
  ingressClassName: nginx
  rules:
  - host: shop.18.223.81.13.nip.io
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: frontend
              port:
                number: 80
  tls:
  - hosts:
      - shop.18.223.81.13.nip.io
    secretName: letsencrypt-prod
